# mantrachain-e2e

./: .envrc.example  .gitignore  .gitmodules  Makefile  README.md  flake.nix  pytest.ini
.github/workflows/: lint.yml  tests-e2e-nix-connect.yml  tests-e2e-nix.yml
contracts/: README.md
contracts/contract-1/: Cargo.toml
contracts/contract-1/.cargo/: config.toml
contracts/contract-1/src/: state.rs
contracts/contract-1/src/commands/: try_reset.rs
contracts/contract-1/src/queries/: mod.rs
integration_tests/: config.yaml  conftest.py  cosmoscli.py  expected_constants.py  genesis.ssz  ibc_utils.py  jwt.hex  network.py  pyproject.toml  shell.nix  test_account.py  test_async.py  test_basic.py  test_call.py  test_chain_id.py  test_contract.py  test_debug_traceblock.py  test_destruct.py  test_distribution.py  test_distribution_precompile.py  test_eip1559.py  test_eip7702.py  test_erc20.py  test_erc20_precompile.py  test_estimate_gas.py  test_exploit.py  test_fee_history.py  test_filters.py  test_flow.py  test_gas.py  test_gov.py  test_ibc.py  test_ibc_evmd.py  test_mempool.py  test_min_gas_price.py  test_patch.py  test_permission.py  test_precompile.py  test_priority.py  test_pruned_node.py  (+15 more)
integration_tests/CosmWasm/: Cargo.toml  README.md  justfile
integration_tests/CosmWasm/contracts/contract-1/src/: contract.rs  error.rs  lib.rs  msg.rs
integration_tests/CosmWasm/contracts/contract-1/src/commands/: mod.rs  try_increment.rs
integration_tests/CosmWasm/contracts/contract-1/src/queries/: query_count.rs
integration_tests/CosmWasm/contracts/contract-1/tests/: integration.rs  logic.rs
integration_tests/CosmWasm/deployer/: .gitignore  README.md  deploy.ts  global.d.ts  migrate.ts  network.ts  package.json  tsconfig.json  utils.ts
integration_tests/CosmWasm/deployer/config/dukong/: dapp_template.ts
integration_tests/CosmWasm/deployer/config/mainnet/: dapp_template.ts
integration_tests/CosmWasm/deployer/deployment/dukong/: dapp_template_2025_04_19_19_16_11.json
integration_tests/CosmWasm/scripts/: build_release.sh  instantiate_contract.sh  set_txflag.sh  store_artifact.sh  test.sh
integration_tests/CosmWasm/scripts/utils/: crate_versions.sh
integration_tests/configs/: accounts.jsonnet  allow_replay.jsonnet  broken-mantrachaind.nix  broken-mantrachaind.patch  chain-id.jsonnet  (+25 more)
nix/: default.nix  go-ethereum.nix  hermes.nix  scripts.nix  sources.json  testenv.nix
scripts/: .env  check_artifacts_size.sh  env.template  export_envs.sh  get_artifacts_versions.sh  geth-genesis.json  network.env.template  prysm.sh  restore_envs.sh  run-integration-tests.sh  start-beacon.sh  start-geth.sh  start-validator.sh  test_ci.sh
(+34 files in other folders)
