[workspace]
resolver = "2"

members = ["contracts/*"]

[workspace.package]
authors       = ["MANTRA Engineering Team <tech@mantrachain.io>"]
documentation = "<link-to-documentation>"
edition       = "2021"
homepage      = "https://mantra.zone"
license       = "MIT"
publish       = false
repository    = "https://github.com/MANTRA-Chain/wasm-testing"
rust-version  = "1.85.0"

[workspace.dependencies]
cosmwasm-schema         = { version = "2.2.2" }
cosmwasm-std            = { version = "2.2.2", default-features = true, features = ["cosmwasm_2_2"] }
cw-migrate-error-derive = { version = "0.1.0" }
cw-multi-test           = { version = "2.3.2", features = ["cosmwasm_2_0", "staking", "stargate"] }
cw-ownable              = { version = "2.1.0" }
cw-storage-plus         = { version = "2.0.0" }
cw-utils                = { version = "2.0.0" }
cw2                     = { version = "2.0.0" }
mantra-utils            = { version = "1.1.1" }
schemars                = { version = "0.8.12" }
semver                  = { version = "1.0.26" }
serde                   = { version = "1.0.218", default-features = false, features = ["derive"] }
serde_json              = { version = "1.0.140" }
thiserror               = { version = "2.0.12" }

# contracts
contract-1 = { path = "contracts/contract-1" }

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 3
overflow-checks  = true
panic            = 'abort'
rpath            = false
